Improve the search Feature
